Replacing utility classes w foundation utils

--- a/scss/_old.scss
+++ b/scss/_old.scss
@@ -7,17 +7,17 @@ body {
 // 	display: block;
 // }
 
-.flex {
-	display: flex;
-}
+// .flex {
+// 	display: flex;
+// }
 
-.relative {
-	position: relative;
-}
+// .relative {
+// 	position: relative;
+// }
 
-.absolute {
-	position: absolute;
-}
+// .absolute {
+// 	position: absolute;
+// }
 
 a.button {
 	border: none;
