--- a/css/app.css
+++ b/css/app.css
@@ -9164,14 +9164,14 @@ header {
     font-size: 9.25rem;
     color: #fff;
     text-shadow: 0 0 20px #000; }
+    #splash.splash .hero-splash .h1-headline span.slogan {
+      display: block;
+      font-family: AvenirNext-Medium;
+      font-size: 46.5px;
+      color: #fff;
+      text-shadow: 0 0 20px #000; }
   #splash.splash .hero-splash .h2-tagline {
     font-family: AvenirNext-Medium;
     font-size: 26px;
     color: #fff;
     text-shadow: 0 2px 40px #000; }
-  #splash.splash .hero-splash span.slogan {
-    display: block;
-    font-family: AvenirNext-Medium;
-    font-size: 46.5px;
-    color: #fff;
-    text-shadow: 0 0 20px #000; }
