Change vertical alignment

--- a/scss/pages/splash/_splash.scss
+++ b/scss/pages/splash/_splash.scss
@@ -3,7 +3,7 @@
 		height: 100vh;
 		display: flex;
 		flex-direction: column;
-		justify-content: center;
+		// justify-content: center;
 		background: #fff url('/img/splash/hero-large.png') center/cover no-repeat;
 
 		.h1-headline {
