--- a/scss/pages/splash/_nav.scss
+++ b/scss/pages/splash/_nav.scss
@@ -2,7 +2,7 @@
 	.hero-splash {
 		.nav-bar {
 			background: #697b99;
-			box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .2), 0 6px 10px 0 rgba(0, 0, 0, .3);
+			box-shadow: 0 2px 2px 0 rgba(0,0,0,.20), 0 6px 10px 0 rgba(0,0,0,.30);
 		}
 	}
 }
