--- a/scss/pages/splash/_nav.scss
+++ b/scss/pages/splash/_nav.scss
@@ -3,6 +3,18 @@
 		.nav-bar {
 			background: #697b99;
 			box-shadow: 0 2px 2px 0 rgba(0,0,0,.20), 0 6px 10px 0 rgba(0,0,0,.30);
+
+			a {
+				color: #fff;
+
+				&:hover {
+					text-decoration: underline;
+				}
+			}
+
+			a.is-active {
+				text-decoration: underline;
+			}
 		}
 	}
 }
