More nav styling

--- a/scss/pages/splash/_nav.scss
+++ b/scss/pages/splash/_nav.scss
@@ -4,6 +4,12 @@
 			background: #697b99;
 			box-shadow: 0 2px 2px 0 rgba(0,0,0,.20), 0 6px 10px 0 rgba(0,0,0,.30);
 
+			.menu {
+				font-weight: bold;
+				padding: rem-calc(8 0);
+				font-size: rem-calc(18);
+			}
+
 			a {
 				color: #fff;
 
