--- a/scss/pages/splash/_splash.scss
+++ b/scss/pages/splash/_splash.scss
@@ -1,7 +1,8 @@
 .splash#splash {
 	.hero-splash {
 		height: 100vh;
-		background: #fff url('/img/splash/hero-large.png') center/cover no-repeat;
+		background: rgba(103,128,154,.20) url('/img/splash/hero-large.png') center/cover no-repeat;
+		background-blend-mode: multiply;
 
 		.h1-headline {
 			font-family: Parisienne-Regular;
